@@ -1,3 +1,13 @@
+2008-01-06  Theodore Kilgore <kilgota@auburn.edu>
+	* *.[c,h]:   The camera of Patrick Simmons is determined to be a 
+		     JL2005D. Support is introduced for distinguishing the 
+		     B, C, and D versions in the places where that is needed. 
+		     Support is added for downloading an arbitrary photo from
+		     the list of photos in the camera. 
+		     NOTE: All these cameras use compression, and how to 
+		     decompress is still unknown. Thus, raw files only. 
+
+
 2007-12-28  Theodore Kilgore <kilgota@auburn.edu>
 	* library.c: Added support for "Amazing Spiderman" reported by 
 		     Victor Hodge <vhodge@sympatico.ca> and for 
